Add style to pages

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Butter Chicken</h1>
+        <h1 class="head page">Butter Chicken</h1>
         <img src="../images/butter-chicken.png" alt="Butter Chicken Image">
 
-        <h2>Description</h2>
+        <h2 class="sub-head">Description</h2>
         <p>Butter chicken is one of my favorite Indian dishes. It's easy to prep for the slow cooker in the morning to come home to the wonderful aroma of warm Indian spices... I love it! Serve with basmati rice and warm naan bread.</p>
 
-        <h2>Ingredients</h2>
-        <ul>          
+        <h2 class="sub-head">Ingredients</h2>
+        <ul class="unsorted-list butter-chicken">          
             <li>2 tablespoons butter</li>
             <li>2 tablespoons vegetable oil</li>
             <li>4 large skinless, boneless chicken thighs, cut into bite-sized pieces</li>
@@ -30,8 +31,8 @@
             <li>salt to taste</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-head">Steps</h2>
+        <ol class="sorted-list butter-chicken">
             <li>Gather all ingredients.</li>
             <li>Heat butter and vegetable oil in a large skillet over medium heat. Stir in chicken, onion, and garlic. Cook and stir until onion has softened and turned translucent, about 10 minutes.</li>
             <li>Stir in tomato paste, curry paste, curry powder, tandoori masala, and garam masala until no lumps of tomato paste remain.</li>
