--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/lasagna.png" alt="Lasagna Image">
+        <h1 class="head page">Lasagna</h1>
+        <img class="image" src="../images/lasagna.png" alt="Lasagna Image">
 
-        <h2>Description</h2>
+        <h2 class="sub-head">Description</h2>
         <p>When <strong>John Chandler</strong> submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old</p>
         <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, below are the ingredients you'll need to add to your grocery list.</p>
 
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="sub-head">Ingredients</h2>
+        <ul class="unsorted-list">
             <li>1 pound sweet Italian sausage</li>
             <li>¾ pound lean ground beef</li>
             <li>½ cup minced onion</li>
@@ -37,8 +38,8 @@
             <li>¾ cup grated Parmesan cheese</li>
         </ul>
         
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-head">Steps</h2>
+        <ol class="sorted-list">
             <li>Gather all your ingredients.</li>
             <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
             <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
