--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Shushi Rolls</h1>
+        <h1 class="head page">Shushi Rolls</h1>
         <img src="../images/shushi.png" alt="Sushi Roll image">
 
-        <h2>Description</h2>
+        <h2 class="sub-head">Description</h2>
         <p>It is very often prepared with seafood, such as squid, eel, yellowtail, salmon, tuna or imitation crab meat. Many types of sushi are vegetarian. It is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish or pickled daikon (takuan) are popular garnishes for the dish.</p>
 
-        <h2>Ingredients</h2>
-        <ul>   
+        <h2 class="sub-head">Ingredients</h2>
+        <ul class="unsorted-list sushi">   
             <li>1 ⅓ cups sushi rice</li>
             <li>1 (4 inch) piece dashi kombu (dried kelp)</li>
             <li>3 cups water</li>
@@ -24,8 +25,8 @@
             <li>desired fillings (see bottom of recipe)</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-head">Steps</h2>
+        <ol class="sorted-list sushi">
             <li>Put rice into a large deep bowl. Fill with cold water and rub rice together with hands until water turns milky white. Drain cloudy water, being careful not to pour out rice. Repeat three or four times until you can see rice through 3 inches of water; drain once more.</li>
             <li>Transfer rice to a saucepan; add kombu and 3 cups water. Let stand 30 minutes. Cover; bring to a boil over high heat. Reduce heat to low; simmer 10 minutes. Remove from heat and let stand, covered, 5 minutes.</li>
             <li>Meanwhile, stir together rice vinegar, sugar, and salt in a small bowl until dissolved.</li>
