--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
 
     <body>
 
-        <h1>Odin Recipes</h1>
+        <h1 class="head">Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
-            <li><a href="./recipes/sushi.html">Sushi Roll</a></li>
+            <li><a class="link" href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a class="link" href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+            <li><a class="link" href="./recipes/sushi.html">Sushi Roll</a></li>
         </ul>
     
         </ol>
