Add padding and margins

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <body>
 
         <h1 class="head">Odin Recipes</h1>
-        <ul>
-            <li><a class="link" href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a class="link" href="./recipes/butter-chicken.html">Butter Chicken</a></li>
-            <li><a class="link" href="./recipes/sushi.html">Sushi Roll</a></li>
-        </ul>
-    
+        <div class="recipe-list">
+            <ul>
+                <li><a class="link" href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a class="link" href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+                <li><a class="link" href="./recipes/sushi.html">Sushi Roll</a></li>
+            </ul>
+        </div>
         </ol>
     </body>
 </html>
