--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,14 +8,14 @@
 
     <body>
         <h1 class="head page">Lasagna</h1>
-        <img class="image" src="../images/lasagna.png" alt="Lasagna Image">
+        <div id="lasagna-img"><img class="image" src="../images/lasagna.png" alt="Lasagna Image"></div>
 
         <h2 class="sub-head">Description</h2>
-        <p>When <strong>John Chandler</strong> submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old</p>
-        <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, below are the ingredients you'll need to add to your grocery list.</p>
+        <div id="paragraph"><p>When <strong>John Chandler</strong> submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old</p>
+        <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, below are the ingredients you'll need to add to your grocery list.</p></div>
 
         <h2 class="sub-head">Ingredients</h2>
-        <ul class="unsorted-list">
+        <div><ul class="unsorted-list lasagna">
             <li>1 pound sweet Italian sausage</li>
             <li>¾ pound lean ground beef</li>
             <li>½ cup minced onion</li>
@@ -36,10 +36,10 @@
             <li>1 egg</li>
             <li>¾ pound mozzarella cheese, sliced</li>
             <li>¾ cup grated Parmesan cheese</li>
-        </ul>
+        </ul></div>
         
         <h2 class="sub-head">Steps</h2>
-        <ol class="sorted-list">
+        <div><ol class="sorted-list lasagna">
             <li>Gather all your ingredients.</li>
             <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
             <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
@@ -50,7 +50,7 @@
             <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</li>
             <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
             <li>Rest lasagna for 15 minutes before serving. </li>
-        </ol>
+        </ol></div>
 
     </body>
 </html>
